--- a/bucket/admin/style.css
+++ b/bucket/admin/style.css
@@ -1231,7 +1231,17 @@ input:checked + .slider:before {
     }
 }
 
+/* Modal Animation */
+#bookingDetailsModal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
 
+#bookingDetailsModal.show {
+    opacity: 1;
+}
 
 
 #bookingDetailsModal .glass-card {
